# libpynamd

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  setup.py
.github/workflows/: cmake-single-platform.yml
include/: libnamd.hpp
libpynamd/: CMakeLists.txt  __init__.py
libpynamd/_core/: libnamd.cpp
